<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tor_title">Réseau Tor</string>
    <string name="tor_installed">Orbot installé</string>
    <string name="tor_missing">Orbot non installé</string>
    <string name="tor_running">Tor actif ✅</string>
    <string name="tor_stopped">Tor arrêté</string>
    <string name="tor_starting">Démarrage de Tor…</string>
    <string name="tor_enable">Activer Tor</string>
    <string name="tor_disable">Désactiver Tor</string>
    <string name="tor_install_orbot">Installer Orbot</string>
    <string name="tor_browse_onion">Navigateur .onion</string>
    <string name="tor_confirm_activation">J\'ai activé Tor dans Orbot</string>
</resources>